Implementation of the evaluation functions and start of the implementation of the AI itself

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(tetris_evolution)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(tetris_evolution main.cpp ai.cpp ai.h)
+add_executable(tetris_evolution main.cpp ai.cpp ai.h functions.cpp functions.h)
